# plexer-cli

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  SECURITY.md  gutenberger.sh  plexer.py  plexer.sh  pyproject.toml  requirements.txt  tox.ini  trivyignore.yaml
.codacy/: codacy.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/instructions/: codacy.instructions.md
.github/workflows/: dependabot.yml  lint.yml  openssf_scorecard.yml  release.yml  release_docker_image.yml  run_full_test_suite.yml  run_smoke_test.yml  run_tests.yml
plexer/: artifact.py  file_manager.py
src/plexer/: file_manager.py  metadata.py
src/plexer_cli/: const.py  file_manager.py  main.py  metadata.py
tests/: conftest.py  const.py  test_artifact.py  test_file_manager.py  test_metadata.py
tests/bootstrap/: blank.mkv  bootstrap_plexer_e2e.sh
