[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plexer"
dynamic = ["version"]
description = "Normalize media files for use with Plex Media Server"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["plex", "media", "catagorization", "organization", "formatting"]
authors = [
  { name = "Josh Carlson", email = "837837+magneticstain@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "logzero~=1.7.0",
  "python-magic~=0.4.27"
]

[project.urls]
Documentation = "https://github.com/magneticstain/plexer#readme"
Issues = "https://github.com/magneticstain/plexer/issues"
Source = "https://github.com/magneticstain/plexer"

[tool.hatch.version]
path = "plexer.py"

[tool.hatch.envs.dev]
dependencies = [
  "ruff~=0.6.6",
  "pytest~=8.3.3",
  "moviepy~=1.0.3"
]
