[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "plexer_cli"
dynamic = ["version"]
description = "Normalize media files and directories for use with Plex Media Server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["plex", "media", "catagorization", "organization", "formatting"]
authors = [
  { name = "Josh Carlson", email = "837837+magneticstain@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",

  "Environment :: Console",

  "Framework :: Hatch",
  "Framework :: Pytest",
  "Framework :: tox",

  "Intended Audience :: System Administrators",

  "Natural Language :: English",

  "Operating System :: MacOS",
  "Operating System :: Unix",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",

  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
]
dependencies = [
  "logzero~=1.7.0",
  "prompt-toolkit>=3.0.52",
  "python-magic~=0.4.27",
]

[project.urls]
Repository = "https://github.com/magneticstain/plexer"
Documentation = "https://github.com/magneticstain/plexer-cli/wiki"
Issues = "https://github.com/magneticstain/plexer/issues"

[project.scripts]
plexer = "plexer_cli.main:main"

# Plugins & Tools
## Hatch
[tool.hatch.version]
path = "src/plexer_cli/main.py"

[dependency-groups]
dev = [
    "moviepy>=2.2.1",
    "pytest>=9.0.2",
]
